--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,20 @@
 {
-	"name": "Python_Container",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": "." // Dockerfileのあるディレクトリ, Dockerがアクセスできる範囲
-	},
-	"settings": {
-		"python.pythonPath": "/usr/local/bin/python3", // 使用するPythonのパス
-	},
-	"extensions": [ // コンテナ上でも使いたいVSCodeの拡張機能をここに追加
-		"ms-python.python", // Python拡張機能	
-		"ms-toolsai.jupyter", // Jupyter Notebook拡張機能
-		"yzhang.markdown-all-in-one", // Markdown拡張機能
-		"njpwerner.autodocstring", // 関数のドキュメンテーション文字列を自動生成
-		"ms-toolsai.datawrangler", // 配列の中身を閲覧
-		"usernamehw.errorlens", // エラー箇所を強調
-		"mechatroner.rainbow-csv", // csvを閲覧
-		"Percy.vscode-numpy-viewer", // numpy配列を閲覧
-		"GitHub.copilot" // GitHub Copilot
-	],
-	// requirements.txtに書かれているライブラリをインストール
-	// Dockfileにも書いてあるが、イメージを再ビルドしなくても、
-	// コンテナの起動時にパッケージをインストールできるため、パッケージの変更をすぐに反映できる
-	// docker stop -> requirements.txtの変更 -> docker start で反映される!!
-	"postCreateCommand": "pip install -r requirements.txt"
-}
+    "name": "OEC",
+    "dockerComposeFile": "compose.yml",
+    "service": "jupyter",
+    "workspaceFolder": "/home/jovyan/work",
+    "remoteUser": "jovyan",
+    "customizations": {
+      "vscode": {
+        "extensions": [
+          "ms-python.python",
+          "ms-python.vscode-pylance",
+          "ms-toolsai.jupyter"
+        ],
+        "settings": {
+          "editor.tabSize": 2,
+          "python.defaultInterpreterPath": "/opt/conda/bin/python"
+        }
+      }
+    }
+  }
