--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,20 @@
 {
-    "name": "OEC",
-    "dockerComposeFile": "compose.yml",
-    "service": "jupyter",
-    "workspaceFolder": "/home/jovyan/work",
-    "remoteUser": "jovyan",
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "ms-python.python",
-          "ms-python.vscode-pylance",
-          "ms-toolsai.jupyter"
-        ],
-        "settings": {
-          "editor.tabSize": 2,
-          "python.defaultInterpreterPath": "/opt/conda/bin/python"
-        }
+  "name": "OEC-LAB1",
+  "dockerComposeFile": "compose.yml",
+  "service": "jupyter",
+  "workspaceFolder": "/home/jovyan/work",
+  "remoteUser": "jovyan",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-toolsai.jupyter"
+      ],
+      "settings": {
+        "editor.tabSize": 2,
+        "python.defaultInterpreterPath": "/opt/conda/bin/python"
       }
     }
   }
+}
